fix button submit on IOS

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,13 +19,13 @@
     line-height: 2;
   }
   #footer .social-list {
-    font-size: 48px;
+    font-size: 32px;
   }
   #footer .social-list a {
     margin: 0 8px;
   }
   #footer .copyright {
-    font-size: 24px;
+    font-size: 18px;
   }
   #footer .copyright a {
     padding: 8px 0;
